--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react-poke-api-adl/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="/react-poke-api-adl/assets/index.7acf10f8.js"></script>
-    <link rel="stylesheet" href="/react-poke-api-adl/assets/index.648f38f7.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="/react-poke-api-adl/favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>React pokeapi adl</title>
+  <script type="module" crossorigin src="/react-poke-api-adl/assets/index.d713d7c9.js"></script>
+  <link rel="stylesheet" href="/react-poke-api-adl/assets/index.648f38f7.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  
+</body>
+
 </html>
